# full-stack-python-react-book

./: .gitignore  .pre-commit-config.yaml  flake.nix
core_backend/: pyproject.toml
core_backend/api_root/: settings.py  urls.py
core_backend/core/: routers.py
core_backend/core/abstract/: models.py  serializers.py
core_backend/core/auth/: permissions.py  tests.py
core_backend/core/auth/serializers/: login.py  register.py
core_backend/core/auth/viewsets/: login.py  register.py
core_backend/core/comment/: models.py  serializers.py  viewsets.py
core_backend/core/comment/migrations/: 0001_initial.py  0002_alter_comment_author_alter_comment_post.py
core_backend/core/comment/tests/: test_models.py  test_viewsets.py
core_backend/core/post/: models.py  serializers.py  viewsets.py
core_backend/core/post/migrations/: 0001_initial.py  0002_alter_post_table.py
core_backend/core/post/tests/: test_models.py  test_viewsets.py
core_backend/core/user/: models.py  serializers.py  viewsets.py
core_backend/core/user/migrations/: 0001_initial.py  0002_user_avatar_user_bio_alter_user_updated.py  0003_user_posts_liked_alter_user_created_and_more.py  0004_user_comments_liked_alter_user_avatar.py
core_backend/core/user/tests/: test_models.py
core_backend/core_backend/: settings.py
core_frontend/: .eslintrc.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
core_frontend/src/: App.test.tsx  App.tsx  main.tsx
core_frontend/src/components/: Layout.tsx  MoreToogleIcon.tsx  Navbar.tsx  Profile.tsx  Toaster.tsx
core_frontend/src/helpers/: axios.ts
core_frontend/src/hooks/: user.actions.ts
core_frontend/src/pages/: EditProfile.tsx  Home.tsx  Login.tsx  Profile.tsx  Registration.tsx  SinglePost.tsx
core_frontend/src/routes/: ProtectedRoute.tsx
(+23 files in other folders)
